@@ -12,6 +12,9 @@ Improved SmartLoad & Drag-Drop:
 -Allow to load a .rom file as a custom rom file for the current machine
 -Allow to Drag-Drop when menu open
 
+Improved ZX Vision:
+-Reorder windows when changing machine but only when ZEsarUX window is smaller than previous one
+
 Improved ZX Desktop:
 -Added configurable icons to the ZX Desktop: icons to windows, icons to actions, file links
 -Right mouse button is used now for secondary actions. It no longer simulates ESC key (unless you enable it on ZX Vision Settings)
